trying to fix horizontal scroll on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -243,9 +243,14 @@ button {
 
 body {
     height: 100%;
-    width: 100vw;
+    width: 100%;
     display: flex;
     flex-direction: column;
+
+    overflow-x: hidden;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 .column {
